<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/containerFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="15dp"
                        android:layout_marginTop="40dp"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/rounded"
                        android:drawableStart="@drawable/ic_email_24"
                        android:drawablePadding="10dp"
                        android:elevation="5dp"
                        android:ems="10"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:selectAllOnFocus="true"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="15dp"
                        android:layout_marginVertical="16dp"
                        android:autofillHints="password"
                        android:background="@drawable/rounded"
                        android:drawableStart="@drawable/ic_password_24"
                        android:drawablePadding="10dp"
                        android:elevation="5dp"
                        android:ems="10"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:selectAllOnFocus="true"
                        android:textSize="14sp"
                        android:nextFocusDown="@id/loginButton"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/loginButton"
                        android:layout_width="157dp"
                        android:layout_height="57dp"
                        android:background="@drawable/button_gradient"
                        android:shadowColor="@color/light_purple_20"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:indeterminateTint="@color/red"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/dontHaveAccountButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@null"
                        android:text="@string/don_t_have_account"
                        android:textAllCaps="false"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
